chore: fixed overflow x and banner skew

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,6 +15,7 @@ html {
   text-size-adjust: none;
   font-size: 10px;
   text-align: center;
+  overflow-x: hidden;
 }
 
 body {
